# FaceSwitch

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: demo_hog.py  demo_yolo.py
src/core/: interfaces.py  types.py
src/faceswitch/: __init__.py
src/faceswitch/core/: __init__.py  interfaces.py  types.py
src/faceswitch/detectors/: __init__.py
src/faceswitch/detectors/hog/: __init__.py  config.py  detector.py
src/faceswitch/detectors/yolo/: __init__.py  config.py  detector.py
src/models/hog/: detector.py
tests/: test_hog_detector.py  test_public_api.py  test_yolo_detector.py
