[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faceswitch"
version = "0.1.0"
description = "Simple multi-model face detection library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FaceSwitch Contributors" }]
dependencies = []

[project.optional-dependencies]
hog = ["dlib>=19.24"]
examples = ["opencv-python>=4.8"]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["faceswitch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.package-data]
faceswitch = ["py.typed"]


keywords = ["face-detection", "computer-vision", "hog", "dlib"]