[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faceswitch"
version = "0.1.0"
description = "Simple multi-model face detection library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "FaceSwitch Contributors" }]
keywords = ["face-detection", "computer-vision", "hog", "dlib"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/game-sys/FaceSwitch"
"Bug Tracker" = "https://github.com/game-sys/FaceSwitch/issues"
"Documentation" = "https://github.com/game-sys/FaceSwitch/blob/main/README.md"

[project.optional-dependencies]
hog = ["dlib>=19.24"]
examples = ["opencv-python>=4.8"]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["faceswitch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.package-data]
faceswitch = ["py.typed"]